# src/main/java/td/agricoles/agricol/dto/response/CollectivityLocalStatistics.java
@@ -1,0 +1,14 @@
+package td.agricoles.agricol.dto.response;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class CollectivityLocalStatistics {
+    private MemberDescription memberDescription;
+    private double earnedAmount;
+    private double unpaidAmount;
+}
