# src/main/java/td/agricoles/agricol/dto/response/CollectivityOverallStatistics.java
@@ -1,0 +1,14 @@
+package td.agricoles.agricol.dto.response;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class CollectivityOverallStatistics {
+    private CollectivityInfo collectivityInformation;
+    private int newMembersNumber;
+    private double overallMemberCurrentDuePercentage;
+}
