# src/main/java/td/agricoles/agricol/dto/response/MemberDescription.java
@@ -1,0 +1,16 @@
+package td.agricoles.agricol.dto.response;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class MemberDescription {
+    private String id;
+    private String firstName;
+    private String lastName;
+    private String email;
+    private String occupation;
+}
